# cc-chatter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: decisions.md  design.md  roadmap.md  spec.md  ui-design.md
examples/: bench_watching.rs  bench_watching_render.rs
issues/: 001-alt-screen-tui-with-keyboard-selection.md  002-agent-tool-name-mismatch.md  003-mouse-support-for-viewport.md
src/: cli.rs  event_loop.rs  lib.rs  main.rs  settings.rs
src/application/: app.rs  mod.rs  msg.rs
src/application/mappers/: message_mapper.rs  mod.rs
src/application/state/: app.rs  domain.rs  heights_cache.rs  mod.rs  viewport.rs
src/application/usecases/: mod.rs  startup_skip.rs
src/domain/: constants.rs  mod.rs
src/domain/entities/: agent.rs  log_entry.rs  mod.rs  session.rs
src/domain/services/: mod.rs  session_filter.rs
src/infrastructure/: mod.rs
src/infrastructure/input/: mod.rs  terminal_guard.rs
src/infrastructure/parsers/: jsonl_parser.rs  mod.rs
src/infrastructure/repositories/: agent_mapper_impl.rs  fs_session_repo.rs  mod.rs
src/infrastructure/watchers/: main_watcher.rs  mod.rs  sub_agent_watcher.rs
src/ui/: format.rs  icons.rs  mod.rs  view.rs
src/ui/components/: chat_bubble.rs  mod.rs
src/ui/layout/: mod.rs  viewport_layout.rs
src/ui/screens/: mod.rs  session_select.rs  subagent_select.rs  waiting.rs  watching.rs
tests/: chat_mode_rendering.rs  cli_options.rs
