[package]
name = "cc-chatter"
version = "0.2.0-rust.1"
edition = "2021"
rust-version = "1.78"
description = "A real-time TUI viewer for Claude Code subagent interactions"
license = "MIT"
authors = ["cc-chatter contributors"]
readme = "README.md"
keywords = ["tui", "claude-code", "subagent", "viewer"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "cc-chatter"
path = "src/main.rs"

# 依存は M1..M4 のマイルストーンに合わせて段階的に追加する。
# プラン全体の依存一覧は docs の計画書を参照。
[dependencies]
# --- M1: CLI + domain ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
dirs = "5.0"
shellexpand = "3.1"

# --- M1: logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- M2: TUI (ratatui + tokio event loop + notify watchers) ---
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal"] }
tokio-stream = "0.1"
futures-util = "0.3"
notify = "6.1"
signal-hook = "0.3"
color-eyre = "0.6"
tracing-appender = "0.2"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
